<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.configurations.ConfigurationsFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/language_radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_language"
                style="@style/TextAppearance.Material3.TitleMedium"/>
            <RadioButton
                android:id="@+id/language_radio_zh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lan_chinese_simplified"/>
            <RadioButton
                android:id="@+id/language_radio_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lan_english"/>
        </RadioGroup>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>