<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/result_layout"
        android:visibility="gone"
        >
    <LinearLayout
        android:id="@+id/bandwidth_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_test_result"
            style="@style/result_text"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/bandwidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00  Mbps"
            style="@style/result_text"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/duration_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
      >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_test_duration"
            style="@style/result_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00  s"
            style="@style/result_text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/traffic_layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_data_usage"
            style="@style/result_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00  MB"
            style="@style/result_text"/>
    </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_start"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/result_layout"
        android:layout_marginTop="10dp"
        />
</RelativeLayout>