<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.FastTestFragment"
    android:animateLayoutChanges="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.example.swiftest.ui.SampleView
        android:id="@+id/sample_view"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scene_root"
        android:animateLayoutChanges="true"
        android:layout_marginTop="20dp"
        android:paddingBottom="80dp"
        >
        <TableLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/result_layout"
            android:visibility="visible"
            android:layout_centerHorizontal="true"
            android:stretchColumns="0"

            >
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_test_result"
                    style="@style/result_text"
                    />



                <TextView
                    android:id="@+id/bandwidth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00"
                    style="@style/result_text"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/result_text"
                    android:text=" Mbps"/>
        </TableRow>


        <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_test_duration"
                    style="@style/result_text" />


                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00"
                    style="@style/result_text"
                    />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/result_text"
                android:text=" s"/>
        </TableRow>


        <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_data_usage"
                    style="@style/result_text"/>

                <TextView
                    android:id="@+id/traffic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00"
                    style="@style/result_text"
                    />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/result_text"
                android:text=" MB"/>
        </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_start"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/result_layout"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>
</LinearLayout>
</ScrollView>